--- a/app/src/main/res/layout/profile.xml
+++ b/app/src/main/res/layout/profile.xml
@@ -114,6 +114,12 @@
             android:layout_height="wrap_content"
             app:menu="@menu/menu_bottom_nav" />
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/btn_getUserid"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="getUserID" />
 </RelativeLayout>
 
 
