--- a/app/src/main/res/layout/booking_sel_locate.xml
+++ b/app/src/main/res/layout/booking_sel_locate.xml
@@ -243,7 +243,7 @@
                     android:textStyle="bold" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/iv_shop_product_pic2"
                     android:layout_width="81dp"
                     android:layout_height="81dp"
                     android:layout_alignParentStart="true"
