--- a/app/src/main/res/layout/lookbook_page.xml
+++ b/app/src/main/res/layout/lookbook_page.xml
@@ -9,6 +9,14 @@
     tools:context=".Activity.Lookbook_PageActivity"
     android:orientation="vertical">
 
+    <ImageView
+        android:id="@+id/backBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:background="@drawable/grey_background"
+        android:padding="12dp"
+        android:layout_marginEnd="6dp"
+        app:srcCompat="@drawable/icon_back" />
 
     <TextView
         android:id="@+id/textView"
