--- a/app/src/main/res/layout/notifications_page.xml
+++ b/app/src/main/res/layout/notifications_page.xml
@@ -9,8 +9,9 @@
         android:id="@+id/notificationListView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/bnv_noti"
         android:layout_marginTop="100dp"
-        android:layout_above="@id/bnv_noti" />
+        android:layout_marginBottom="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
